--- a/web-app/src/styles/Minimap.scss
+++ b/web-app/src/styles/Minimap.scss
@@ -1,29 +1,20 @@
 .minimap-viewport {
   position: absolute;
   box-sizing: border-box;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: rgba(70, 70, 70, 0.4);
   z-index: 1;
-  cursor: move
-}
+  cursor: default; }
 
 .minimap {
   float: right;
-  position: fixed;
+  position: absolute;
   right: 0;
   z-index: 1;
-  margin: 10px;
-  background-color: rgba(0, 0, 0, .29);
-  border: 1px solid rgba(0, 0, 0, .17)
-}
+  margin: 0 20px 0 0;
+  background-color: rgba(0, 0, 0, 0.29);
+  border: 1px solid rgba(0, 0, 0, 0.17); }
 
 .minimap-container {
   overflow: scroll;
   width: 100%;
-  height: 100%
-}
-
-.minimap-children {
-  background: #ccc;
-  border: 1px solid #000;
-  box-sizing: border-box
-}
+  height: 100%; }
