--- a/web-app/src/styles/Flowmap.scss
+++ b/web-app/src/styles/Flowmap.scss
@@ -10,7 +10,11 @@
   }
 
   .edge.selected {
-    stroke: #cc5555;
+    stroke: #ff8c8c;
     opacity: 0.5;
+  }
+
+  .node.output {
+    fill: #ff8c8c;
   }
 }
