--- a/web-app/src/styles/App.css
+++ b/web-app/src/styles/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
 .App {
   display: flex;
   position: relative;
@@ -24,4 +25,6 @@
     flex-grow: 1; }
   .App .right {
     width: 0px;
-    flex-grow: 1; }
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column; }
