--- a/web-app/src/styles/App.scss
+++ b/web-app/src/styles/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 
 .App {
   display: flex;
@@ -31,5 +32,7 @@
   .right {
     width: 0px;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
   }
 }
